--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "main": "index.js",
   "scripts": {
     "test": "npx wdio run ./wdio.conf.js",
-    "generate:report": "allure generate --clean allure-results && allure open"
+    "generate:report": "allure generate --clean allure-results && allure open",
+    "eslint:check": "eslint . --ext .js",
+    "eslint:fix": "eslint . --ext .js --fix"
   },
   "dependencies": {
     "@wdio/cli": "^7.6.1",
     "allure-commandline": "^2.13.8",
     "faker": "^5.5.3",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "eslint-plugin-wdio": "^7.4.2",
+    "eslint-plugin-webdriverio": "^1.0.1"
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^7.14.1",
     "@wdio/local-runner": "^7.6.1",
     "@wdio/mocha-framework": "^7.6.0",
     "chromedriver": "^94.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "wdio-chromedriver-service": "^7.1.0"
   }
 }
